--- a/Skript.tex
+++ b/Skript.tex
@@ -933,7 +933,7 @@
 
     \begin{satz} % Satz 18
         \label{satz:int-lokal}
-        Sei $U\subseteq\C$ offen, $f: U \to \C$ analytisch, $z_0\in U$ und $R > 0$, sodass $D_R\of{z_0} = \set{\abs{z-z_0} \leq R}\subseteq U$. Dann existiert eine analytische Funktion $F: D_R\of{z_0} \to \C$ mit $F'\of{z} = f\of{z}~\forall z\in D_R\of{z_0}$. D.h. $f$ hat lokal in der Nähe von $z_0$ eine Stammfunktion.
+        Sei $U\subseteq\C$ offen, $f: U \to \C$ analytisch, $z_0\in U$ und $R > 0$, sodass $D_R\of{z_0} = \set{\abs{z-z_0} < R}\subseteq U$. Dann existiert eine analytische Funktion $F: D_R\of{z_0} \to \C$ mit $F'\of{z} = f\of{z}~\forall z\in D_R\of{z_0}$. D.h. $f$ hat lokal in der Nähe von $z_0$ eine Stammfunktion.
 
         \begin{proof}
             O.B.d.A. sei $U=D_R\of{z_0}$. Zwischen $w, z\in D_R\of{z_0}$ gibt es einen Weg
